# AgentOS

./: .gitignore  README.md  pyproject.toml
agentos/: __init__.py  cli.py  client.py
agentos/agents/: base.py  llm.py
agentos/api/: __init__.py  dashboard.py  server.py
agentos/drivers/: __init__.py  base.py  browser.py  filesystem.py  http.py  python.py  shell.py  sql.py
agentos/kernel/: depgraph.py  events.py  gpu.py  kernel.py  memory.py  messages.py  models.py  permissions.py  process.py  scheduler.py  states.py  store.py
agentos/runtime/: child.py  daemon.py  executor.py  subproc.py
benchmarks/: __init__.py  _autogen_defs.py  _temporal_defs.py  attenuate.py  bench.py  compare.py  schedulers.py
docs/: build_manual.py  manual.py
examples/: app_research.py  app_support.py  assistant.py  crash.py  customer_support.py  deadlock.py  deploy.py  finance.py  memory.py  pipeline.py  planner.py  research_assistant.py  software_company.py  tree.py
tests/: run.py  test_approvals.py  test_auth.py  test_budget.py  test_daemon.py  test_dynamic_agents.py  test_events.py  test_kernel.py  test_memory.py  test_models.py  test_recovery.py  test_spec_gaps.py  test_task_api.py  test_tools.py
