[project]
name = "agentos"
version = "0.2.0"
description = "An operating system-inspired runtime for autonomous AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []  # Phase 1 is stdlib-only, on purpose

[project.scripts]
agent = "agentos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentos"]
